[tool.poetry]
name = "pd_cli"
version = "1.0.0"
description = "CLI for https://pythondeploy.co/."
authors = ["Federico Jaramillo Martínez <federicojaramillom@gmail.com>"]
license= "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/pythondeploy/cli"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = ">=1.16.47"
docker = ">=5.0.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "*"
bump2version = "*"
docutils = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-docstrings = "*"
flake8-fixme = "*"
flake8-unused-arguments = "*"
isort = "*"
pygments = "*"
mypy = "*"
boto3-stubs = {extras = ["ecr", "cloudformation", "lambda"], version = ">=1.16.47"}

[tool.poetry.scripts]
python-deploy = 'pd_cli.main:app'
pd = 'pd_cli.main:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
